[package]
name = "cli-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.19"
solana-clap-v3-utils = "=1.17.3"
solana-cli-config = "=1.17.3"
solana-client = "=1.17.3"
solana-logger = "=1.17.3"
solana-remote-wallet = "=1.17.3"
solana-sdk = "=1.17.3"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
solana-test-validator = "=1.17.3"

[workspace]
