[package]
name = "cli-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.19"
solana-clap-v3-utils = "=2.0.2"
solana-cli-config = "=2.0.2"
solana-client = "=2.0.2"
solana-logger = "=2.0.2"
solana-remote-wallet = "=2.0.2"
solana-sdk = "=2.0.2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
solana-test-validator = "=2.0.2"

[workspace]
